--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
+    "mongoose": "^8.19.1",
     "mysql2": "^3.14.0",
     "nest-commander": "^3.18.0",
     "reflect-metadata": "^0.2.0",
