--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "lucide-react": "^0.546.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
