--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
