--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
+    "exceljs": "^4.4.0",
     "mongoose": "^8.19.1",
     "mysql2": "^3.14.0",
     "nest-commander": "^3.18.0",
