--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,13 +5,30 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Soporte para React Router
+    # Soporte para React Router (SPA)
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     # Archivos estáticos
     location /assets/ {
         try_files $uri =404;
     }
+
+    # Cache para archivos estáticos
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Headers de seguridad
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+
+    # Comprimir respuestas
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json application/javascript;
 }
