--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,12 +7,7 @@ server {
 
     # Soporte para React Router (SPA)
     location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    # Archivos estáticos
-    location /assets/ {
-        try_files $uri =404;
+        try_files $uri /index.html;
     }
 
     # Cache para archivos estáticos
