--- a/backend/package.json
+++ b/backend/package.json
@@ -29,12 +29,15 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^6.1.0",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "exceljs": "^4.4.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.19.1",
     "mysql2": "^3.14.0",
     "nest-commander": "^3.18.0",
+    "nodemailer": "^7.0.11",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
